--- a/src/app/main-pages/board/task/task-dialog/task-dialog.component.scss
+++ b/src/app/main-pages/board/task/task-dialog/task-dialog.component.scss
@@ -28,7 +28,7 @@
 
 .dialog-header {
   @include dFlex($jc: space-between, $ai: center);
-  padding: 32px 32px 0 32px;
+  padding: 32px 16px 0 32px;
   flex-shrink: 0;
 }
 
@@ -67,7 +67,8 @@
 .dialog-body {
   flex: 1;
   overflow-y: auto;
-  padding: 24px 32px 0 32px;
+  padding: 24px 16px 0 32px;
+  margin-right: 16px;
   min-height: 0;
 }
 
